# Heimdall_optimize

./: README  configure.ac
Applications/: Makefile.am  heimdall.C  heimdall_pl.C
Formats/: SigprocFile.C
Pipeline/: Makefile.am  default_params.C  find_giants.cu  parse_command_line.C  pipeline.cu
Pipeline/hd/: cached_allocator.cuh  params.h
